# serializer version: 1
# name: TestE2ELoadedData.test_e2e_cve_connector_snapshot[cve_connector]
  dict({
    'data': dict({
      'cves': list([
        dict({
          'cve_id': 'CVE-1999-0229',
          'description': 'Denial of service in Windows NT IIS server using ..\\..',
        }),
        dict({
          'cve_id': 'CVE-2000-0115',
          'description': 'IIS allows local users to cause a denial of service via invalid regular expressions in a Visual Basic script in an ASP page.',
        }),
        dict({
          'cve_id': 'CVE-2006-20001',
          'description': '''
            A carefully crafted If: request header can cause a memory read, or write of a single zero byte, in a pool (heap) memory location beyond the header value sent. This could cause the process to crash.
            
            This issue affects Apache HTTP Server 2.4.54 and earlier.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2007-0087',
          'description': 'Microsoft Internet Information Services (IIS), when accessed through a TCP connection with a large window size, allows remote attackers to cause a denial of service (network bandwidth consumption) via a Range header that specifies multiple copies of the same fragment.  NOTE: the severity of this issue has been disputed by third parties, who state that the large window size required by the attack is not normally supported or configured by the server, or that a DDoS-style attack would accomplish the same goal',
        }),
        dict({
          'cve_id': 'CVE-2007-3205',
          'description': 'The parse_str function in (1) PHP, (2) Hardened-PHP, and (3) Suhosin, when called without a second parameter, might allow remote attackers to overwrite arbitrary variables by specifying variable names and values in the string to be parsed.  NOTE: it is not clear whether this is a design limitation of the function or a bug in PHP, although it is likely to be regarded as a bug in Hardened-PHP and Suhosin.',
        }),
        dict({
          'cve_id': 'CVE-2017-15710',
          'description': "In Apache httpd 2.0.23 to 2.0.65, 2.2.0 to 2.2.34, and 2.4.0 to 2.4.29, mod_authnz_ldap, if configured with AuthLDAPCharsetConfig, uses the Accept-Language header value to lookup the right charset encoding when verifying the user's credentials. If the header value is not present in the charset conversion table, a fallback mechanism is used to truncate it to a two characters value to allow a quick retry (for example, 'en-US' is truncated to 'en'). A header value of less than two characters forces an out of bound write of one NUL byte to a memory location that is not part of the string. In the worst case, quite unlikely, the process would crash which could be used as a Denial of Service attack. In the more likely case, this memory is already reserved for future use and the issue has no effect at all.",
        }),
        dict({
          'cve_id': 'CVE-2017-15715',
          'description': "In Apache httpd 2.4.0 to 2.4.29, the expression specified in <FilesMatch> could match '$' to a newline character in a malicious filename, rather than matching only the end of the filename. This could be exploited in environments where uploads of some files are are externally blocked, but only by matching the trailing portion of the filename.",
        }),
        dict({
          'cve_id': 'CVE-2017-3167',
          'description': 'In Apache httpd 2.2.x before 2.2.33 and 2.4.x before 2.4.26, use of the ap_get_basic_auth_pw() by third-party modules outside of the authentication phase may lead to authentication requirements being bypassed.',
        }),
        dict({
          'cve_id': 'CVE-2017-3169',
          'description': 'In Apache httpd 2.2.x before 2.2.33 and 2.4.x before 2.4.26, mod_ssl may dereference a NULL pointer when third-party modules call ap_hook_process_connection() during an HTTP request to an HTTPS port.',
        }),
        dict({
          'cve_id': 'CVE-2017-7659',
          'description': 'A maliciously constructed HTTP/2 request could cause mod_http2 in Apache HTTP Server 2.4.24, 2.4.25 to dereference a NULL pointer and crash the server process.',
        }),
        dict({
          'cve_id': 'CVE-2017-7668',
          'description': 'The HTTP strict parsing changes added in Apache httpd 2.2.32 and 2.4.24 introduced a bug in token list parsing, which allows ap_find_token() to search past the end of its input string. By maliciously crafting a sequence of request headers, an attacker may be able to cause a segmentation fault, or to force ap_find_token() to return an incorrect value.',
        }),
        dict({
          'cve_id': 'CVE-2017-7679',
          'description': 'In Apache httpd 2.2.x before 2.2.33 and 2.4.x before 2.4.26, mod_mime can read one byte past the end of a buffer when sending a malicious Content-Type response header.',
        }),
        dict({
          'cve_id': 'CVE-2017-8923',
          'description': "The zend_string_extend function in Zend/zend_string.h in PHP through 7.1.5 does not prevent changes to string objects that result in a negative length, which allows remote attackers to cause a denial of service (application crash) or possibly have unspecified other impact by leveraging a script's use of .= with a long string.",
        }),
        dict({
          'cve_id': 'CVE-2017-9788',
          'description': "In Apache httpd before 2.2.34 and 2.4.x before 2.4.27, the value placeholder in [Proxy-]Authorization headers of type 'Digest' was not initialized or reset before or between successive key=value assignments by mod_auth_digest. Providing an initial key with no '=' assignment could reflect the stale value of uninitialized pool memory used by the prior request, leading to leakage of potentially confidential information, and a segfault in other cases resulting in denial of service.",
        }),
        dict({
          'cve_id': 'CVE-2017-9798',
          'description': "Apache httpd allows remote attackers to read secret data from process memory if the Limit directive can be set in a user's .htaccess file, or if httpd.conf has certain misconfigurations, aka Optionsbleed. This affects the Apache HTTP Server through 2.2.34 and 2.4.x through 2.4.27. The attacker sends an unauthenticated OPTIONS HTTP request when attempting to read secret data. This is a use-after-free issue and thus secret data is not always sent, and the specific data depends on many factors including configuration. Exploitation with .htaccess can be blocked with a patch to the ap_limit_section function in server/core.c.",
        }),
        dict({
          'cve_id': 'CVE-2018-11763',
          'description': 'In Apache HTTP Server 2.4.17 to 2.4.34, by sending continuous, large SETTINGS frames a client can occupy a connection, server thread and CPU time without any connection timeout coming to effect. This affects only HTTP/2 connections. A possible mitigation is to not enable the h2 protocol.',
        }),
        dict({
          'cve_id': 'CVE-2018-1283',
          'description': 'In Apache httpd 2.4.0 to 2.4.29, when mod_session is configured to forward its session data to CGI applications (SessionEnv on, not the default), a remote user may influence their content by using a "Session" header. This comes from the "HTTP_SESSION" variable name used by mod_session to forward its data to CGIs, since the prefix "HTTP_" is also used by the Apache HTTP Server to pass HTTP header fields, per CGI specifications.',
        }),
        dict({
          'cve_id': 'CVE-2018-1301',
          'description': 'A specially crafted request could have crashed the Apache HTTP Server prior to version 2.4.30, due to an out of bound access after a size limit is reached by reading the HTTP header. This vulnerability is considered very hard if not impossible to trigger in non-debug mode (both log and build level), so it is classified as low risk for common server usage.',
        }),
        dict({
          'cve_id': 'CVE-2018-1302',
          'description': 'When an HTTP/2 stream was destroyed after being handled, the Apache HTTP Server prior to version 2.4.30 could have written a NULL pointer potentially to an already freed memory. The memory pools maintained by the server make this vulnerability hard to trigger in usual configurations, the reporter and the team could not reproduce it outside debug builds, so it is classified as low risk.',
        }),
        dict({
          'cve_id': 'CVE-2018-1303',
          'description': 'A specially crafted HTTP request header could have crashed the Apache HTTP Server prior to version 2.4.30 due to an out of bound read while preparing data to be cached in shared memory. It could be used as a Denial of Service attack against users of mod_cache_socache. The vulnerability is considered as low risk since mod_cache_socache is not widely used, mod_cache_disk is not concerned by this vulnerability.',
        }),
        dict({
          'cve_id': 'CVE-2018-1312',
          'description': 'In Apache httpd 2.2.0 to 2.4.29, when generating an HTTP Digest authentication challenge, the nonce sent to prevent reply attacks was not correctly generated using a pseudo-random seed. In a cluster of servers using a common Digest authentication configuration, HTTP requests could be replayed across servers by an attacker without detection.',
        }),
        dict({
          'cve_id': 'CVE-2018-1333',
          'description': 'By specially crafting HTTP/2 requests, workers would be allocated 60 seconds longer than necessary, leading to worker exhaustion and a denial of service. Fixed in Apache HTTP Server 2.4.34 (Affected 2.4.18-2.4.30,2.4.33).',
        }),
        dict({
          'cve_id': 'CVE-2018-17189',
          'description': 'In Apache HTTP server versions 2.4.37 and prior, by sending request bodies in a slow loris way to plain resources, the h2 stream for that request unnecessarily occupied a server thread cleaning up that incoming data. This affects only HTTP/2 (mod_http2) connections.',
        }),
        dict({
          'cve_id': 'CVE-2018-17199',
          'description': 'In Apache HTTP Server 2.4 release 2.4.37 and prior, mod_session checks the session expiry time before decoding the session. This causes session expiry time to be ignored for mod_session_cookie sessions since the expiry time is loaded when the session is decoded.',
        }),
        dict({
          'cve_id': 'CVE-2019-0196',
          'description': 'A vulnerability was found in Apache HTTP Server 2.4.17 to 2.4.38. Using fuzzed network input, the http/2 request handling could be made to access freed memory in string comparison when determining the method of a request and thus process the request incorrectly.',
        }),
        dict({
          'cve_id': 'CVE-2019-0211',
          'description': 'In Apache HTTP Server 2.4 releases 2.4.17 to 2.4.38, with MPM event, worker or prefork, code executing in less-privileged child processes or threads (including scripts executed by an in-process scripting interpreter) could execute arbitrary code with the privileges of the parent process (usually root) by manipulating the scoreboard. Non-Unix systems are not affected.',
        }),
        dict({
          'cve_id': 'CVE-2019-0217',
          'description': 'In Apache HTTP Server 2.4 release 2.4.38 and prior, a race condition in mod_auth_digest when running in a threaded server could allow a user with valid credentials to authenticate using another username, bypassing configured access control restrictions.',
        }),
        dict({
          'cve_id': 'CVE-2019-0220',
          'description': "A vulnerability was found in Apache HTTP Server 2.4.0 to 2.4.38. When the path component of a request URL contains multiple consecutive slashes ('/'), directives such as LocationMatch and RewriteRule must account for duplicates in regular expressions while other aspects of the servers processing will implicitly collapse them.",
        }),
        dict({
          'cve_id': 'CVE-2019-10081',
          'description': 'HTTP/2 (2.4.20 through 2.4.39) very early pushes, for example configured with "H2PushResource", could lead to an overwrite of memory in the pushing request\'s pool, leading to crashes. The memory copied is that of the configured push link header values, not data supplied by the client.',
        }),
        dict({
          'cve_id': 'CVE-2019-10082',
          'description': 'In Apache HTTP Server 2.4.18-2.4.39, using fuzzed network input, the http/2 session handling could be made to read memory after being freed, during connection shutdown.',
        }),
        dict({
          'cve_id': 'CVE-2019-10092',
          'description': 'In Apache HTTP Server 2.4.0-2.4.39, a limited cross-site scripting issue was reported affecting the mod_proxy error page. An attacker could cause the link on the error page to be malformed and instead point to a page of their choice. This would only be exploitable where a server was set up with proxying enabled but was misconfigured in such a way that the Proxy Error page was displayed.',
        }),
        dict({
          'cve_id': 'CVE-2019-10098',
          'description': 'In Apache HTTP server 2.4.0 to 2.4.39, Redirects configured with mod_rewrite that were intended to be self-referential might be fooled by encoded newlines and redirect instead to an unexpected URL within the request URL.',
        }),
        dict({
          'cve_id': 'CVE-2019-11034',
          'description': 'When processing certain files, PHP EXIF extension in versions 7.1.x below 7.1.28, 7.2.x below 7.2.17 and 7.3.x below 7.3.4 can be caused to read past allocated buffer in exif_process_IFD_TAG function. This may lead to information disclosure or crash.',
        }),
        dict({
          'cve_id': 'CVE-2019-11035',
          'description': 'When processing certain files, PHP EXIF extension in versions 7.1.x below 7.1.28, 7.2.x below 7.2.17 and 7.3.x below 7.3.4 can be caused to read past allocated buffer in exif_iif_add_value function. This may lead to information disclosure or crash.',
        }),
        dict({
          'cve_id': 'CVE-2019-11036',
          'description': 'When processing certain files, PHP EXIF extension in versions 7.1.x below 7.1.29, 7.2.x below 7.2.18 and 7.3.x below 7.3.5 can be caused to read past allocated buffer in exif_process_IFD_TAG function. This may lead to information disclosure or crash.',
        }),
        dict({
          'cve_id': 'CVE-2019-11038',
          'description': 'When using the gdImageCreateFromXbm() function in the GD Graphics Library (aka LibGD) 2.2.5, as used in the PHP GD extension in PHP versions 7.1.x below 7.1.30, 7.2.x below 7.2.19 and 7.3.x below 7.3.6, it is possible to supply data that will cause the function to use the value of uninitialized variable. This may lead to disclosing contents of the stack that has been left there by previous code.',
        }),
        dict({
          'cve_id': 'CVE-2019-11039',
          'description': 'Function iconv_mime_decode_headers() in PHP versions 7.1.x below 7.1.30, 7.2.x below 7.2.19 and 7.3.x below 7.3.6 may perform out-of-buffer read due to integer overflow when parsing MIME headers. This may lead to information disclosure or crash.',
        }),
        dict({
          'cve_id': 'CVE-2019-11040',
          'description': 'When PHP EXIF extension is parsing EXIF information from an image, e.g. via exif_read_data() function, in PHP versions 7.1.x below 7.1.30, 7.2.x below 7.2.19 and 7.3.x below 7.3.6 it is possible to supply it with data what will cause it to read past the allocated buffer. This may lead to information disclosure or crash.',
        }),
        dict({
          'cve_id': 'CVE-2019-11041',
          'description': 'When PHP EXIF extension is parsing EXIF information from an image, e.g. via exif_read_data() function, in PHP versions 7.1.x below 7.1.31, 7.2.x below 7.2.21 and 7.3.x below 7.3.8 it is possible to supply it with data what will cause it to read past the allocated buffer. This may lead to information disclosure or crash.',
        }),
        dict({
          'cve_id': 'CVE-2019-11042',
          'description': 'When PHP EXIF extension is parsing EXIF information from an image, e.g. via exif_read_data() function, in PHP versions 7.1.x below 7.1.31, 7.2.x below 7.2.21 and 7.3.x below 7.3.8 it is possible to supply it with data what will cause it to read past the allocated buffer. This may lead to information disclosure or crash.',
        }),
        dict({
          'cve_id': 'CVE-2019-11043',
          'description': 'In PHP versions 7.1.x below 7.1.33, 7.2.x below 7.2.24 and 7.3.x below 7.3.11 in certain configurations of FPM setup it is possible to cause FPM module to write past allocated buffers into the space reserved for FCGI protocol data, thus opening the possibility of remote code execution.',
        }),
        dict({
          'cve_id': 'CVE-2019-13224',
          'description': 'A use-after-free in onig_new_deluxe() in regext.c in Oniguruma 6.9.2 allows attackers to potentially cause information disclosure, denial of service, or possibly code execution by providing a crafted regular expression. The attacker provides a pair of a regex pattern and a string, with a multi-byte encoding that gets handled by onig_new_deluxe(). Oniguruma issues often affect Ruby, as well as common optional libraries for PHP and Rust.',
        }),
        dict({
          'cve_id': 'CVE-2019-17567',
          'description': 'Apache HTTP Server versions 2.4.6 to 2.4.46 mod_proxy_wstunnel configured on an URL that is not necessarily Upgraded by the origin server was tunneling the whole connection regardless, thus allowing for subsequent requests on the same connection to pass through with no HTTP validation, authentication or authorization possibly configured.',
        }),
        dict({
          'cve_id': 'CVE-2019-9517',
          'description': 'Some HTTP/2 implementations are vulnerable to unconstrained interal data buffering, potentially leading to a denial of service. The attacker opens the HTTP/2 window so the peer can send without constraint; however, they leave the TCP window closed so the peer cannot actually write (many of) the bytes on the wire. The attacker then sends a stream of requests for a large response object. Depending on how the servers queue the responses, this can consume excess memory, CPU, or both.',
        }),
        dict({
          'cve_id': 'CVE-2019-9637',
          'description': 'An issue was discovered in PHP before 7.1.27, 7.2.x before 7.2.16, and 7.3.x before 7.3.3. Due to the way rename() across filesystems is implemented, it is possible that file being renamed is briefly available with wrong permissions while the rename is ongoing, thus enabling unauthorized users to access the data.',
        }),
        dict({
          'cve_id': 'CVE-2019-9638',
          'description': 'An issue was discovered in the EXIF component in PHP before 7.1.27, 7.2.x before 7.2.16, and 7.3.x before 7.3.3. There is an uninitialized read in exif_process_IFD_in_MAKERNOTE because of mishandling the maker_note->offset relationship to value_len.',
        }),
        dict({
          'cve_id': 'CVE-2019-9639',
          'description': 'An issue was discovered in the EXIF component in PHP before 7.1.27, 7.2.x before 7.2.16, and 7.3.x before 7.3.3. There is an uninitialized read in exif_process_IFD_in_MAKERNOTE because of mishandling the data_len variable.',
        }),
        dict({
          'cve_id': 'CVE-2019-9640',
          'description': 'An issue was discovered in the EXIF component in PHP before 7.1.27, 7.2.x before 7.2.16, and 7.3.x before 7.3.3. There is an Invalid Read in exif_process_SOFn.',
        }),
        dict({
          'cve_id': 'CVE-2019-9641',
          'description': 'An issue was discovered in the EXIF component in PHP before 7.1.27, 7.2.x before 7.2.16, and 7.3.x before 7.3.3. There is an uninitialized read in exif_process_IFD_in_TIFF.',
        }),
        dict({
          'cve_id': 'CVE-2019-9675',
          'description': 'An issue was discovered in PHP 7.x before 7.1.27 and 7.3.x before 7.3.3. phar_tar_writeheaders_int in ext/phar/tar.c has a buffer overflow via a long link value. NOTE: The vendor indicates that the link value is used only when an archive contains a symlink, which currently cannot happen: "This issue allows theoretical compromise of security, but a practical attack is usually impossible.',
        }),
        dict({
          'cve_id': 'CVE-2020-11993',
          'description': 'Apache HTTP Server versions 2.4.20 to 2.4.43 When trace/debug was enabled for the HTTP/2 module and on certain traffic edge patterns, logging statements were made on the wrong connection, causing concurrent use of memory pools. Configuring the LogLevel of mod_http2 above "info" will mitigate this vulnerability for unpatched servers.',
        }),
        dict({
          'cve_id': 'CVE-2020-13938',
          'description': 'Apache HTTP Server versions 2.4.0 to 2.4.46 Unprivileged local users can stop httpd on Windows',
        }),
        dict({
          'cve_id': 'CVE-2020-1927',
          'description': 'In Apache HTTP Server 2.4.0 to 2.4.41, redirects configured with mod_rewrite that were intended to be self-referential might be fooled by encoded newlines and redirect instead to an an unexpected URL within the request URL.',
        }),
        dict({
          'cve_id': 'CVE-2020-1934',
          'description': 'In Apache HTTP Server 2.4.0 to 2.4.41, mod_proxy_ftp may use uninitialized memory when proxying to a malicious FTP server.',
        }),
        dict({
          'cve_id': 'CVE-2020-35452',
          'description': 'Apache HTTP Server versions 2.4.0 to 2.4.46 A specially crafted Digest nonce can cause a stack overflow in mod_auth_digest. There is no report of this overflow being exploitable, nor the Apache HTTP Server team could create one, though some particular compiler and/or compilation option might make it possible, with limited consequences anyway due to the size (a single byte) and the value (zero byte) of the overflow',
        }),
        dict({
          'cve_id': 'CVE-2020-9490',
          'description': 'Apache HTTP Server versions 2.4.20 to 2.4.43. A specially crafted value for the \'Cache-Digest\' header in a HTTP/2 request would result in a crash when the server actually tries to HTTP/2 PUSH a resource afterwards. Configuring the HTTP/2 feature via "H2Push off" will mitigate this vulnerability for unpatched servers.',
        }),
        dict({
          'cve_id': 'CVE-2021-26690',
          'description': 'Apache HTTP Server versions 2.4.0 to 2.4.46 A specially crafted Cookie header handled by mod_session can cause a NULL pointer dereference and crash, leading to a possible Denial Of Service',
        }),
        dict({
          'cve_id': 'CVE-2021-26691',
          'description': 'In Apache HTTP Server versions 2.4.0 to 2.4.46 a specially crafted SessionHeader sent by an origin server could cause a heap overflow',
        }),
        dict({
          'cve_id': 'CVE-2021-33193',
          'description': 'A crafted method sent through HTTP/2 will bypass validation and be forwarded by mod_proxy, which can lead to request splitting or cache poisoning. This issue affects Apache HTTP Server 2.4.17 to 2.4.48.',
        }),
        dict({
          'cve_id': 'CVE-2021-34798',
          'description': 'Malformed requests may cause the server to dereference a NULL pointer. This issue affects Apache HTTP Server 2.4.48 and earlier.',
        }),
        dict({
          'cve_id': 'CVE-2021-39275',
          'description': 'ap_escape_quotes() may write beyond the end of a buffer when given malicious input. No included modules pass untrusted data to these functions, but third-party / external modules may. This issue affects Apache HTTP Server 2.4.48 and earlier.',
        }),
        dict({
          'cve_id': 'CVE-2021-40438',
          'description': 'A crafted request uri-path can cause mod_proxy to forward the request to an origin server choosen by the remote user. This issue affects Apache HTTP Server 2.4.48 and earlier.',
        }),
        dict({
          'cve_id': 'CVE-2021-44224',
          'description': 'A crafted URI sent to httpd configured as a forward proxy (ProxyRequests on) can cause a crash (NULL pointer dereference) or, for configurations mixing forward and reverse proxy declarations, can allow for requests to be directed to a declared Unix Domain Socket endpoint (Server Side Request Forgery). This issue affects Apache HTTP Server 2.4.7 up to 2.4.51 (included).',
        }),
        dict({
          'cve_id': 'CVE-2021-44790',
          'description': 'A carefully crafted request body can cause a buffer overflow in the mod_lua multipart parser (r:parsebody() called from Lua scripts). The Apache httpd team is not aware of an exploit for the vulnerabilty though it might be possible to craft one. This issue affects Apache HTTP Server 2.4.51 and earlier.',
        }),
        dict({
          'cve_id': 'CVE-2022-22719',
          'description': 'A carefully crafted request body can cause a read to a random memory area which could cause the process to crash. This issue affects Apache HTTP Server 2.4.52 and earlier.',
        }),
        dict({
          'cve_id': 'CVE-2022-22720',
          'description': 'Apache HTTP Server 2.4.52 and earlier fails to close inbound connection when errors are encountered discarding the request body, exposing the server to HTTP Request Smuggling',
        }),
        dict({
          'cve_id': 'CVE-2022-22721',
          'description': 'If LimitXMLRequestBody is set to allow request bodies larger than 350MB (defaults to 1M) on 32 bit systems an integer overflow happens which later causes out of bounds writes. This issue affects Apache HTTP Server 2.4.52 and earlier.',
        }),
        dict({
          'cve_id': 'CVE-2022-23943',
          'description': 'Out-of-bounds Write vulnerability in mod_sed of Apache HTTP Server allows an attacker to overwrite heap memory with possibly attacker provided data. This issue affects Apache HTTP Server 2.4 version 2.4.52 and prior versions.',
        }),
        dict({
          'cve_id': 'CVE-2022-26377',
          'description': "Inconsistent Interpretation of HTTP Requests ('HTTP Request Smuggling') vulnerability in mod_proxy_ajp of Apache HTTP Server allows an attacker to smuggle requests to the AJP server it forwards requests to. This issue affects Apache HTTP Server Apache HTTP Server 2.4 version 2.4.53 and prior versions.",
        }),
        dict({
          'cve_id': 'CVE-2022-28330',
          'description': 'Apache HTTP Server 2.4.53 and earlier on Windows may read beyond bounds when configured to process requests with the mod_isapi module.',
        }),
        dict({
          'cve_id': 'CVE-2022-28614',
          'description': "The ap_rwrite() function in Apache HTTP Server 2.4.53 and earlier may read unintended memory if an attacker can cause the server to reflect very large input using ap_rwrite() or ap_rputs(), such as with mod_luas r:puts() function. Modules compiled and distributed separately from Apache HTTP Server that use the 'ap_rputs' function and may pass it a very large (INT_MAX or larger) string must be compiled against current headers to resolve the issue.",
        }),
        dict({
          'cve_id': 'CVE-2022-28615',
          'description': 'Apache HTTP Server 2.4.53 and earlier may crash or disclose information due to a read beyond bounds in ap_strcmp_match() when provided with an extremely large input buffer. While no code distributed with the server can be coerced into such a call, third-party modules or lua scripts that use ap_strcmp_match() may hypothetically be affected.',
        }),
        dict({
          'cve_id': 'CVE-2022-29404',
          'description': 'In Apache HTTP Server 2.4.53 and earlier, a malicious request to a lua script that calls r:parsebody(0) may cause a denial of service due to no default limit on possible input size.',
        }),
        dict({
          'cve_id': 'CVE-2022-30556',
          'description': 'Apache HTTP Server 2.4.53 and earlier may return lengths to applications calling r:wsread() that point past the end of the storage allocated for the buffer.',
        }),
        dict({
          'cve_id': 'CVE-2022-31628',
          'description': 'In PHP versions before 7.4.31, 8.0.24 and 8.1.11, the phar uncompressor code would recursively uncompress "quines" gzip files, resulting in an infinite loop.',
        }),
        dict({
          'cve_id': 'CVE-2022-31629',
          'description': "In PHP versions before 7.4.31, 8.0.24 and 8.1.11, the vulnerability enables network and same-site attackers to set a standard insecure cookie in the victim's browser which is treated as a `__Host-` or `__Secure-` cookie by PHP applications.",
        }),
        dict({
          'cve_id': 'CVE-2022-31813',
          'description': 'Apache HTTP Server 2.4.53 and earlier may not send the X-Forwarded-* headers to the origin server based on client side Connection header hop-by-hop mechanism. This may be used to bypass IP based authentication on the origin server/application.',
        }),
        dict({
          'cve_id': 'CVE-2022-36760',
          'description': "Inconsistent Interpretation of HTTP Requests ('HTTP Request Smuggling') vulnerability in mod_proxy_ajp of Apache HTTP Server allows an attacker to smuggle requests to the AJP server it forwards requests to.  This issue affects Apache HTTP Server Apache HTTP Server 2.4 version 2.4.54 and prior versions.",
        }),
        dict({
          'cve_id': 'CVE-2022-37436',
          'description': 'Prior to Apache HTTP Server 2.4.55, a malicious backend can cause the response headers to be truncated early, resulting in some headers being incorporated into the response body. If the later headers have any security purpose, they will not be interpreted by the client.',
        }),
        dict({
          'cve_id': 'CVE-2022-4900',
          'description': 'A vulnerability was found in PHP where setting the environment variable PHP_CLI_SERVER_WORKERS to a large value leads to a heap buffer overflow.',
        }),
        dict({
          'cve_id': 'CVE-2023-25690',
          'description': '''
            Some mod_proxy configurations on Apache HTTP Server versions 2.4.0 through 2.4.55 allow a HTTP Request Smuggling attack.
            
            
            
            
            Configurations are affected when mod_proxy is enabled along with some form of RewriteRule
             or ProxyPassMatch in which a non-specific pattern matches
             some portion of the user-supplied request-target (URL) data and is then
             re-inserted into the proxied request-target using variable 
            substitution. For example, something like:
            
            
            
            
            RewriteEngine on
            RewriteRule "^/here/(.*)" "http://example.com:8080/elsewhere?$1"; [P]
            ProxyPassReverse /here/ http://example.com:8080/
            
            
            Request splitting/smuggling could result in bypass of access controls in the proxy server, proxying unintended URLs to existing origin servers, and cache poisoning. Users are recommended to update to at least version 2.4.56 of Apache HTTP Server.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2023-31122',
          'description': 'Out-of-bounds Read vulnerability in mod_macro of Apache HTTP Server.This issue affects Apache HTTP Server: through 2.4.57.',
        }),
        dict({
          'cve_id': 'CVE-2023-38709',
          'description': '''
            Faulty input validation in the core of Apache allows malicious or exploitable backend/content generators to split HTTP responses.
            
            This issue affects Apache HTTP Server: through 2.4.58.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2023-45802',
          'description': '''
            When a HTTP/2 stream was reset (RST frame) by a client, there was a time window were the request's memory resources were not reclaimed immediately. Instead, de-allocation was deferred to connection close. A client could send new requests and resets, keeping the connection busy and open and causing the memory footprint to keep on growing. On connection close, all resources were reclaimed, but the process might run out of memory before that.
            
            This was found by the reporter during testing of CVE-2023-44487 (HTTP/2 Rapid Reset Exploit) with their own test client. During "normal" HTTP/2 use, the probability to hit this bug is very low. The kept memory would not become noticeable before the connection closes or times out.
            
            Users are recommended to upgrade to version 2.4.58, which fixes the issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-24795',
          'description': '''
            HTTP Response splitting in multiple modules in Apache HTTP Server allows an attacker that can inject malicious response headers into backend applications to cause an HTTP desynchronization attack.
            
            Users are recommended to upgrade to version 2.4.59, which fixes this issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-27316',
          'description': 'HTTP/2 incoming headers exceeding the limit are temporarily buffered in nghttp2 in order to generate an informative HTTP 413 response. If a client does not stop sending headers, this leads to memory exhaustion.',
        }),
        dict({
          'cve_id': 'CVE-2024-3566',
          'description': 'A command inject vulnerability allows an attacker to perform command injection on Windows applications that indirectly depend on the CreateProcess function when the specific conditions are satisfied.',
        }),
        dict({
          'cve_id': 'CVE-2024-38472',
          'description': '''
            SSRF in Apache HTTP Server on Windows allows to potentially leak NTLM hashes to a malicious server via SSRF and malicious requests or content 
            Users are recommended to upgrade to version 2.4.60 which fixes this issue.  Note: Existing configurations that access UNC paths will have to configure new directive "UNCList" to allow access during request processing.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-38473',
          'description': '''
            Encoding problem in mod_proxy in Apache HTTP Server 2.4.59 and earlier allows request URLs with incorrect encoding to be sent to backend services, potentially bypassing authentication via crafted requests.
            Users are recommended to upgrade to version 2.4.60, which fixes this issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-38474',
          'description': '''
            Substitution encoding issue in mod_rewrite in Apache HTTP Server 2.4.59 and earlier allows attacker to execute scripts in
            directories permitted by the configuration but not directly reachable by any URL or source disclosure of scripts meant to only to be executed as CGI.
            
            Users are recommended to upgrade to version 2.4.60, which fixes this issue.
            
            Some RewriteRules that capture and substitute unsafely will now fail unless rewrite flag "UnsafeAllow3F" is specified.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-38475',
          'description': '''
            Improper escaping of output in mod_rewrite in Apache HTTP Server 2.4.59 and earlier allows an attacker to map URLs to filesystem locations that are permitted to be served by the server but are not intentionally/directly reachable by any URL, resulting in code execution or source code disclosure. 
            
            Substitutions in server context that use a backreferences or variables as the first segment of the substitution are affected.  Some unsafe RewiteRules will be broken by this change and the rewrite flag "UnsafePrefixStat" can be used to opt back in once ensuring the substitution is appropriately constrained.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-38476',
          'description': '''
            Vulnerability in core of Apache HTTP Server 2.4.59 and earlier are vulnerably to information disclosure, SSRF or local script execution via backend applications whose response headers are malicious or exploitable.
            
            Users are recommended to upgrade to version 2.4.60, which fixes this issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-38477',
          'description': '''
            null pointer dereference in mod_proxy in Apache HTTP Server 2.4.59 and earlier allows an attacker to crash the server via a malicious request.
            Users are recommended to upgrade to version 2.4.60, which fixes this issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-39573',
          'description': '''
            Potential SSRF in mod_rewrite in Apache HTTP Server 2.4.59 and earlier allows an attacker to cause unsafe RewriteRules to unexpectedly setup URL's to be handled by mod_proxy.
            Users are recommended to upgrade to version 2.4.60, which fixes this issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-40898',
          'description': '''
            SSRF in Apache HTTP Server on Windows with mod_rewrite in server/vhost context, allows to potentially leak NTML hashes to a malicious server via SSRF and malicious requests.
            
            Users are recommended to upgrade to version 2.4.62 which fixes this issue. 
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-42516',
          'description': '''
            HTTP response splitting in the core of Apache HTTP Server allows an attacker who can manipulate the Content-Type response headers of applications hosted or proxied by the server can split the HTTP response.
            
            This vulnerability was described as CVE-2023-38709 but the patch included in Apache HTTP Server 2.4.59 did not address the issue.
            
            Users are recommended to upgrade to version 2.4.64, which fixes this issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-43204',
          'description': '''
            SSRF in Apache HTTP Server with mod_proxy loaded allows an attacker to send outbound proxy requests to a URL controlled by the attacker.  Requires an unlikely configuration where mod_headers is configured to modify the Content-Type request or response header with a value provided in the HTTP request.
            
            Users are recommended to upgrade to version 2.4.64 which fixes this issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-43394',
          'description': '''
            Server-Side Request Forgery (SSRF) in Apache HTTP Server on Windows allows to potentially leak NTLM hashes to a malicious server via 
            mod_rewrite or apache expressions that pass unvalidated request input.
            
            This issue affects Apache HTTP Server: from 2.4.0 through 2.4.63.
            
            Note:  The Apache HTTP Server Project will be setting a higher bar for accepting vulnerability reports regarding SSRF via UNC paths. 
            
            The server offers limited protection against administrators directing the server to open UNC paths.
            Windows servers should limit the hosts they will connect over via SMB based on the nature of NTLM authentication.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2024-47252',
          'description': '''
            Insufficient escaping of user-supplied data in mod_ssl in Apache HTTP Server 2.4.63 and earlier allows an untrusted SSL/TLS client to insert escape characters into log files in some configurations.
            
            In a logging configuration where CustomLog is used with "%{varname}x" or "%{varname}c" to log variables provided by mod_ssl such as SSL_TLS_SNI, no escaping is performed by either mod_log_config or mod_ssl and unsanitized data provided by the client may appear in log files.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2025-49812',
          'description': '''
            In some mod_ssl configurations on Apache HTTP Server versions through to 2.4.63, an HTTP desynchronisation attack allows a man-in-the-middle attacker to hijack an HTTP session via a TLS upgrade.
            
            Only configurations using "SSLEngine optional" to enable TLS upgrades are affected. Users are recommended to upgrade to version 2.4.64, which removes support for TLS upgrade.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2025-53020',
          'description': '''
            Late Release of Memory after Effective Lifetime vulnerability in Apache HTTP Server.
            
            This issue affects Apache HTTP Server: from 2.4.17 up to 2.4.63.
            
            Users are recommended to upgrade to version 2.4.64, which fixes the issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2025-58098',
          'description': '''
            Apache HTTP Server 2.4.65 and earlier with Server Side Includes (SSI) enabled and mod_cgid (but not mod_cgi) passes the shell-escaped query string to #exec cmd="..." directives.
            
            This issue affects Apache HTTP Server before 2.4.66.
            
            Users are recommended to upgrade to version 2.4.66, which fixes the issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2025-59775',
          'description': '''
            Server-Side Request Forgery (SSRF) vulnerability 
            
             in Apache HTTP Server on Windows 
            
            with AllowEncodedSlashes On and MergeSlashes Off  allows to potentially leak NTLM 
            hashes to a malicious server via SSRF and malicious requests or content
            
            Users are recommended to upgrade to version 2.4.66, which fixes the issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2025-65082',
          'description': '''
            Improper Neutralization of Escape, Meta, or Control Sequences vulnerability in Apache HTTP Server through environment variables set via the Apache configuration unexpectedly superseding variables calculated by the server for CGI programs.
            
            This issue affects Apache HTTP Server from 2.4.0 through 2.4.65.
            
            Users are recommended to upgrade to version 2.4.66 which fixes the issue.
          ''',
        }),
        dict({
          'cve_id': 'CVE-2025-66200',
          'description': '''
            mod_userdir+suexec bypass via AllowOverride FileInfo vulnerability in Apache HTTP Server. Users with access to use the RequestHeader directive in htaccess can cause some CGI scripts to run under an unexpected userid.
            
            This issue affects Apache HTTP Server: from 2.4.7 through 2.4.65.
            
            Users are recommended to upgrade to version 2.4.66, which fixes the issue.
          ''',
        }),
      ]),
    }),
  })
# ---
# name: TestE2ELoadedData.test_e2e_easm_snapshot[easm]
  dict({
    'data': dict({
      'nodeObjects': list([
        dict({
          'host': None,
          'ips': list([
            dict({
              'domain_names': list([
              ]),
            }),
          ]),
        }),
        dict({
          'host': None,
          'ips': list([
            dict({
              'domain_names': list([
              ]),
            }),
          ]),
        }),
        dict({
          'host': None,
          'ips': list([
            dict({
              'domain_names': list([
              ]),
            }),
          ]),
        }),
        dict({
          'host': None,
          'ips': list([
            dict({
              'domain_names': list([
              ]),
            }),
          ]),
        }),
        dict({
          'host': dict({
            'network_services': list([
            ]),
            'software_versions': list([
            ]),
          }),
          'ips': list([
            dict({
              'domain_names': list([
                dict({
                  'domain_name': 'test.cz',
                }),
              ]),
            }),
          ]),
        }),
        dict({
          'host': dict({
            'network_services': list([
              dict({
                'port': 80,
                'protocol': 'http',
                'service': 'http',
              }),
            ]),
            'software_versions': list([
              dict({
                'version': 'cpe:2.3:a:adobe:dreamweaver:*:*:*:*:*:*:*:*',
              }),
              dict({
                'version': 'cpe:2.3:a:microsoft:asp.net:*:*:*:*:*:*:*:*',
              }),
              dict({
                'version': 'cpe:2.3:a:microsoft:asp.net:2.0.50727:*:*:*:*:*:*:*',
              }),
              dict({
                'version': 'cpe:2.3:a:microsoft:internet_information_server:8.5:*:*:*:*:*:*:*',
              }),
            ]),
          }),
          'ips': list([
            dict({
              'domain_names': list([
                dict({
                  'domain_name': 'testasp.vulnweb.com',
                }),
                dict({
                  'domain_name': 'testaspnet.vulnweb.com',
                }),
              ]),
            }),
          ]),
        }),
        dict({
          'host': dict({
            'network_services': list([
              dict({
                'port': 80,
                'protocol': 'http',
                'service': 'http',
              }),
            ]),
            'software_versions': list([
              dict({
                'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
              }),
              dict({
                'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
              }),
            ]),
          }),
          'ips': list([
            dict({
              'domain_names': list([
                dict({
                  'domain_name': 'rest.vulnweb.com',
                }),
              ]),
            }),
          ]),
        }),
      ]),
    }),
  })
# ---
# name: TestE2ELoadedData.test_e2e_nmap_snapshot[nmap]
  dict({
    'data': dict({
      'hosts': list([
        dict({
          'components': list([
          ]),
          'hostname': None,
          'network_services': list([
          ]),
          'software_versions': list([
          ]),
        }),
        dict({
          'components': list([
          ]),
          'hostname': None,
          'network_services': list([
            dict({
              'port': 80,
              'protocol': 'http',
              'service': 'http',
            }),
          ]),
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:adobe:dreamweaver:*:*:*:*:*:*:*:*',
            }),
            dict({
              'version': 'cpe:2.3:a:microsoft:asp.net:*:*:*:*:*:*:*:*',
            }),
            dict({
              'version': 'cpe:2.3:a:microsoft:asp.net:2.0.50727:*:*:*:*:*:*:*',
            }),
            dict({
              'version': 'cpe:2.3:a:microsoft:internet_information_server:8.5:*:*:*:*:*:*:*',
            }),
          ]),
        }),
        dict({
          'components': list([
          ]),
          'hostname': None,
          'network_services': list([
            dict({
              'port': 80,
              'protocol': 'http',
              'service': 'http',
            }),
          ]),
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
        }),
      ]),
    }),
  })
# ---
# name: TestE2ELoadedData.test_e2e_nuclei_snapshot[nuclei]
  dict({
    'data': dict({
      'vulnerabilities': list([
        dict({
          'cve': dict({
            'cve_id': 'CVE-1999-0229',
          }),
          'description': 'Assumed vulnerability with ID CVE-1999-0229',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:microsoft:internet_information_server:8.5:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2000-0115',
          }),
          'description': 'Assumed vulnerability with ID CVE-2000-0115',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:microsoft:internet_information_server:8.5:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2006-20001',
          }),
          'description': 'Assumed vulnerability with ID CVE-2006-20001',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2007-0087',
          }),
          'description': 'Assumed vulnerability with ID CVE-2007-0087',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:microsoft:internet_information_server:8.5:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2007-3205',
          }),
          'description': 'Assumed vulnerability with ID CVE-2007-3205',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2017-15710',
          }),
          'description': 'Assumed vulnerability with ID CVE-2017-15710',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2017-15715',
          }),
          'description': 'Assumed vulnerability with ID CVE-2017-15715',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2017-3167',
          }),
          'description': 'Assumed vulnerability with ID CVE-2017-3167',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2017-3169',
          }),
          'description': 'Assumed vulnerability with ID CVE-2017-3169',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2017-7659',
          }),
          'description': 'Assumed vulnerability with ID CVE-2017-7659',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2017-7668',
          }),
          'description': 'Assumed vulnerability with ID CVE-2017-7668',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2017-7679',
          }),
          'description': 'Assumed vulnerability with ID CVE-2017-7679',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2017-8923',
          }),
          'description': 'Assumed vulnerability with ID CVE-2017-8923',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2017-9788',
          }),
          'description': 'Assumed vulnerability with ID CVE-2017-9788',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2017-9798',
          }),
          'description': 'Assumed vulnerability with ID CVE-2017-9798',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2018-11763',
          }),
          'description': 'Assumed vulnerability with ID CVE-2018-11763',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2018-1283',
          }),
          'description': 'Assumed vulnerability with ID CVE-2018-1283',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2018-1301',
          }),
          'description': 'Assumed vulnerability with ID CVE-2018-1301',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2018-1302',
          }),
          'description': 'Assumed vulnerability with ID CVE-2018-1302',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2018-1303',
          }),
          'description': 'Assumed vulnerability with ID CVE-2018-1303',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2018-1312',
          }),
          'description': 'Assumed vulnerability with ID CVE-2018-1312',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2018-1333',
          }),
          'description': 'Assumed vulnerability with ID CVE-2018-1333',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2018-17189',
          }),
          'description': 'Assumed vulnerability with ID CVE-2018-17189',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2018-17199',
          }),
          'description': 'Assumed vulnerability with ID CVE-2018-17199',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-0196',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-0196',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-0211',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-0211',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-0217',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-0217',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-0220',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-0220',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-10081',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-10081',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-10082',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-10082',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-10092',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-10092',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-10098',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-10098',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-11034',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-11034',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-11035',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-11035',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-11036',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-11036',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-11038',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-11038',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-11039',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-11039',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-11040',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-11040',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-11041',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-11041',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-11042',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-11042',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-11043',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-11043',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-13224',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-13224',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-17567',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-17567',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-9517',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-9517',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-9637',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-9637',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-9638',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-9638',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-9639',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-9639',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-9640',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-9640',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-9641',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-9641',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2019-9675',
          }),
          'description': 'Assumed vulnerability with ID CVE-2019-9675',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2020-11993',
          }),
          'description': 'Assumed vulnerability with ID CVE-2020-11993',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2020-13938',
          }),
          'description': 'Assumed vulnerability with ID CVE-2020-13938',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2020-1927',
          }),
          'description': 'Assumed vulnerability with ID CVE-2020-1927',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2020-1934',
          }),
          'description': 'Assumed vulnerability with ID CVE-2020-1934',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2020-35452',
          }),
          'description': 'Assumed vulnerability with ID CVE-2020-35452',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2020-9490',
          }),
          'description': 'Assumed vulnerability with ID CVE-2020-9490',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2021-26690',
          }),
          'description': 'Assumed vulnerability with ID CVE-2021-26690',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2021-26691',
          }),
          'description': 'Assumed vulnerability with ID CVE-2021-26691',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2021-33193',
          }),
          'description': 'Assumed vulnerability with ID CVE-2021-33193',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2021-34798',
          }),
          'description': 'Assumed vulnerability with ID CVE-2021-34798',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2021-39275',
          }),
          'description': 'Assumed vulnerability with ID CVE-2021-39275',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2021-40438',
          }),
          'description': 'Assumed vulnerability with ID CVE-2021-40438',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2021-44224',
          }),
          'description': 'Assumed vulnerability with ID CVE-2021-44224',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2021-44790',
          }),
          'description': 'Assumed vulnerability with ID CVE-2021-44790',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2022-22719',
          }),
          'description': 'Assumed vulnerability with ID CVE-2022-22719',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2022-22720',
          }),
          'description': 'Assumed vulnerability with ID CVE-2022-22720',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2022-22721',
          }),
          'description': 'Assumed vulnerability with ID CVE-2022-22721',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2022-23943',
          }),
          'description': 'Assumed vulnerability with ID CVE-2022-23943',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2022-26377',
          }),
          'description': 'Assumed vulnerability with ID CVE-2022-26377',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2022-28330',
          }),
          'description': 'Assumed vulnerability with ID CVE-2022-28330',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2022-28614',
          }),
          'description': 'Assumed vulnerability with ID CVE-2022-28614',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2022-28615',
          }),
          'description': 'Assumed vulnerability with ID CVE-2022-28615',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2022-29404',
          }),
          'description': 'Assumed vulnerability with ID CVE-2022-29404',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2022-30556',
          }),
          'description': 'Assumed vulnerability with ID CVE-2022-30556',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2022-31628',
          }),
          'description': 'Assumed vulnerability with ID CVE-2022-31628',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2022-31629',
          }),
          'description': 'Assumed vulnerability with ID CVE-2022-31629',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2022-31813',
          }),
          'description': 'Assumed vulnerability with ID CVE-2022-31813',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2022-36760',
          }),
          'description': 'Assumed vulnerability with ID CVE-2022-36760',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2022-37436',
          }),
          'description': 'Assumed vulnerability with ID CVE-2022-37436',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2022-4900',
          }),
          'description': 'Assumed vulnerability with ID CVE-2022-4900',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2023-25690',
          }),
          'description': 'Assumed vulnerability with ID CVE-2023-25690',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2023-31122',
          }),
          'description': 'Assumed vulnerability with ID CVE-2023-31122',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2023-38709',
          }),
          'description': 'Assumed vulnerability with ID CVE-2023-38709',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2023-45802',
          }),
          'description': 'Assumed vulnerability with ID CVE-2023-45802',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2024-24795',
          }),
          'description': 'Assumed vulnerability with ID CVE-2024-24795',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2024-27316',
          }),
          'description': 'Assumed vulnerability with ID CVE-2024-27316',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2024-3566',
          }),
          'description': 'Assumed vulnerability with ID CVE-2024-3566',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:php:php:7.1.26:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2024-38472',
          }),
          'description': 'Assumed vulnerability with ID CVE-2024-38472',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2024-38473',
          }),
          'description': 'Assumed vulnerability with ID CVE-2024-38473',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2024-38474',
          }),
          'description': 'Assumed vulnerability with ID CVE-2024-38474',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2024-38475',
          }),
          'description': 'Assumed vulnerability with ID CVE-2024-38475',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2024-38476',
          }),
          'description': 'Assumed vulnerability with ID CVE-2024-38476',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2024-38477',
          }),
          'description': 'Assumed vulnerability with ID CVE-2024-38477',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2024-39573',
          }),
          'description': 'Assumed vulnerability with ID CVE-2024-39573',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2024-40898',
          }),
          'description': 'Assumed vulnerability with ID CVE-2024-40898',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2024-42516',
          }),
          'description': 'Assumed vulnerability with ID CVE-2024-42516',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2024-43204',
          }),
          'description': 'Assumed vulnerability with ID CVE-2024-43204',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2024-43394',
          }),
          'description': 'Assumed vulnerability with ID CVE-2024-43394',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2024-47252',
          }),
          'description': 'Assumed vulnerability with ID CVE-2024-47252',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2025-49812',
          }),
          'description': 'Assumed vulnerability with ID CVE-2025-49812',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2025-53020',
          }),
          'description': 'Assumed vulnerability with ID CVE-2025-53020',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2025-58098',
          }),
          'description': 'Assumed vulnerability with ID CVE-2025-58098',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2025-59775',
          }),
          'description': 'Assumed vulnerability with ID CVE-2025-59775',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2025-65082',
          }),
          'description': 'Assumed vulnerability with ID CVE-2025-65082',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
        dict({
          'cve': dict({
            'cve_id': 'CVE-2025-66200',
          }),
          'description': 'Assumed vulnerability with ID CVE-2025-66200',
          'software_versions': list([
            dict({
              'version': 'cpe:2.3:a:apache:http_server:2.4.25:*:*:*:*:*:*:*',
            }),
          ]),
          'status': list([
            'assessed',
            'estimated',
          ]),
        }),
      ]),
    }),
  })
# ---
